--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ demo-env/clab-demo-env
 demo-env/.demo-env.clab.yml.bak
 demo-env/nornir.log
 demo-env/ansible-inventory.yml
-demo-env/scripts/venv
+demo-env/venv
