update requirements to add hvac

--- a/demo-env/requirements.txt
+++ b/demo-env/requirements.txt
@@ -1,13 +1,21 @@
+certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
+colorama==0.4.6
 cryptography==44.0.0
 dictdiffer==0.9.0
 grpcio==1.68.1
+hvac==2.3.0
+idna==3.10
 mypy-extensions==1.0.0
 nornir==3.4.1
 nornir-ansible==2023.12.28
 nornir-pygnmi==0.2.0
+nornir-utils==0.2.0
 protobuf==5.29.2
 pycparser==2.22
 pygnmi==0.8.14
+requests==2.32.3
 ruamel.yaml==0.18.7
 ruamel.yaml.clib==0.2.12
+urllib3==2.3.0
