--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -5,7 +5,7 @@
 
 # Local .terraform directories
 **/.terraform/*
-terraform/.terraform.lock.hcl
+.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
